Minor alignment fix

--- a/style.css
+++ b/style.css
@@ -9,13 +9,42 @@ body{
 .hero{
     background: url("header.jpg") no-repeat center center fixed;
     height: 70vh;
-    margin-top: -5%;
+   display: flex;
+   position: relative;
+   flex-direction: column;
     color:white;
     
 }
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    background-color: black;
+    opacity: 0.5;
+}
+.heroText {
+    margin: auto;
+    z-index:1;
+}
+.heroText p {
+    margin: 2rem 0;
+    
+}
+.heroText h1 {
+    max-width: 27ch;
+}
+.heroText .btn{
+    padding: 1rem 8rem;
+}
+
 .display-4{
     font-size: 3em;
 }
+.contentPart1{
+    margin-left:3rem;
+}
+
 .con2{
      height: 100vh;
     display: flex;
@@ -25,12 +54,15 @@ body{
 }
 .rowHeight{
     margin-top: -20%;
+    margin-right:-10rem;
 }
 .fCard{
     height:40vh;
     background-color: white;
 }
-
+.featureCard{
+    
+}
 .banner{
     height: 50vh;
     background: url("laptop-banner.png") no-repeat center center fixed;
@@ -58,12 +90,24 @@ body{
 
 .services{
     height: 70vh;
+    display: flex;
+    align-items:center ;
 }
 
 footer{
+    display: flex;
     background-color: white;
     height: 60vh;
     width: 100%;
+    align-items: center;
+}
+.rowFoot{
+margin-left: 0 auto;
+}
+hr{
+    position: absolute;
+    margin-top: -10px;
+    left:5;
 }
 .fa {
     padding: 10px;
@@ -92,5 +136,30 @@ footer{
 }
 
 .copyright{
+    display: flex;
+    justify-content: space-between;
     height: 30vh;
+    align-items:center;
+    padding: 0 5rem;
+}
+.rowCopy{
+    align-items: center;
+}
+.footer-title{
+    display: flex;
+    align-items: center;
+    margin-top:15px;
+    color: blue;
+}
+.footer-title::before {
+    content: '';
+    display: inline-flex;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    background: url("assets/logo.png") no-repeat center center fixed;
+    background-size: cover;
+    border-radius: 25px;
+    margin-right: 20px;
+    margin-left: -12px;
 }
